[package]
name = "zgclp"
description = "Zgclp (Zero-grammar definition command-line parser)"
version = "0.2.1"
edition = "2021"
authors = ["Toshihiro Kamiya <kamiya@mbj.nifty.com>"]
license = "MIT/Apache-2.0"
keywords = ["cli", "parser"]
category = ["command-line-interface"]
homepage = "https://github.com/tos-kamiya/zgclp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
